--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,6 @@ header{
 .header_button{
 	display: inline-block;
 	text-decoration: none;
-	box-shadow: 10px 17px 34px 6px rgba(18, 61, 145, 0.83);
 	border-radius: 50px;
 	background-color: #ffffff;
 	color:#072b6f;
@@ -36,6 +35,12 @@ header{
 	font-weight: 700;
 	padding: 17px 55px;
 	margin-top: 33px;
+	-webkit-transition: 0.25s;
+	-o-transition: 0.25s;
+	transition: 0.25s;
+}
+.header_button:hover {
+	opacity: 0.75;
 }
 header small{
 	font-size: 12px;
@@ -139,7 +144,14 @@ footer{
 	font-size: 18px;
 	border-radius: 50px;
 	padding: 12px 40px;
+	-webkit-transition: 0.25s;
+	-o-transition: 0.25s;
+	transition: 0.25s;
 
+}
+.footer_button:hover {
+	background-color: #fff;
+	color: #3a7dfd;
 }
 
 @media (max-width: 1200px) {
